docs: remove all non-bordered input examples #177

--- a/components/input/apiExamples/email.html
+++ b/components/input/apiExamples/email.html
@@ -1,8 +1,4 @@
-<auro-input required type="email">
-  <slot slot="label">Email address</slot>
-</auro-input>
-
-<auro-input bordered required type="email">
+<auro-input type="email" bordered required>
   <slot slot="label">Email address</slot>
   <slot slot="helptext">Please enter your email address.</slot>
 </auro-input>
