--- a/components/input/apiExamples/maxLength.html
+++ b/components/input/apiExamples/maxLength.html
@@ -1,9 +1,4 @@
-<auro-input required maxlength="12" setCustomValidityTooLong="Oops! There were too many characters entered.">
-  <slot slot="label">Voucher Code</slot>
-  <slot slot="helptext">Please enter your 12 character voucher code.</slot>
-</auro-input>
-
-<auro-input bordered required maxlength="12" setCustomValidityTooLong="Oops! There were too many characters entered.">
+<auro-input maxlength="12" setCustomValidityTooLong="Oops! There were too many characters entered." bordered required>
   <slot slot="label">Voucher Code</slot>
   <slot slot="helptext">Please enter your 12 character voucher code.</slot>
 </auro-input>
