--- a/components/input/apiExamples/minLength.html
+++ b/components/input/apiExamples/minLength.html
@@ -1,9 +1,4 @@
-<auro-input required minlength="4" setCustomValidityTooShort="Please enter a full voucher code.">
-  <slot slot="label">Voucher Code</slot>
-  <slot slot="helptext">Please enter your 4 character voucher code.</slot>
-</auro-input>
-
-<auro-input bordered required minlength="4" setCustomValidityTooShort="Please enter a full voucher code.">
+<auro-input minlength="4" setCustomValidityTooShort="Please enter a full voucher code." bordered required>
   <slot slot="label">Voucher Code</slot>
   <slot slot="helptext">Please enter your 4 character voucher code.</slot>
 </auro-input>
