--- a/components/input/apiExamples/monthFullYear.html
+++ b/components/input/apiExamples/monthFullYear.html
@@ -1,7 +1,3 @@
-<auro-input type="month-fullYear">
-  <slot slot="label">Departure date</slot>
-</auro-input>
-
-<auro-input bordered type="month-fullYear" required>
+<auro-input type="month-fullYear" bordered>
   <slot slot="label">Arrival date</slot>
 </auro-input>
