--- a/components/input/apiExamples/creditCardIcon.html
+++ b/components/input/apiExamples/creditCardIcon.html
@@ -1,8 +1,4 @@
-<auro-input required icon type="credit-card">
-  <slot slot="label">Card number</slot>
-</auro-input>
-
-<auro-input bordered required icon type="credit-card">
+<auro-input icon type="credit-card" bordered required>
   <slot slot="label">Card number</slot>
   <slot slot="helptext">Valid credit card numbers must include 16 digits (15 for Amex).</slot>
 </auro-input>
