--- a/components/input/apiExamples/error.html
+++ b/components/input/apiExamples/error.html
@@ -1,7 +1,7 @@
 <auro-button id="setCustomErrorBtn">Set Custom Error</auro-button>
 <auro-button id="setCustomErrorClearBtn">Clear Custom Error</auro-button>
-
-<auro-input id="setCustomErrorExample" error="Initial error attribute value">
+<br /><br />
+<auro-input id="setCustomErrorExample" error="Initial error attribute value" bordered>
   <span slot="label">Name</span>
   <span slot="helptext">Please enter your full name.</span>
 </auro-input>
