--- a/components/input/apiExamples/monthDayYear.html
+++ b/components/input/apiExamples/monthDayYear.html
@@ -1,7 +1,3 @@
-<auro-input type="month-day-year" required>
-  <slot slot="label">Departure date</slot>
-</auro-input>
-
-<auro-input bordered type="month-day-year">
+<auro-input type="month-day-year" bordered>
   <slot slot="label">Arrival date</slot>
 </auro-input>
