--- a/components/input/apiExamples/monthYear.html
+++ b/components/input/apiExamples/monthYear.html
@@ -1,7 +1,3 @@
-<auro-input type="month-year">
-  <slot slot="label">Departure date</slot>
-</auro-input>
-
-<auro-input bordered type="month-year" required>
+<auro-input type="month-year" bordered>
   <slot slot="label">Arrival date</slot>
 </auro-input>
