--- a/components/input/apiExamples/number.html
+++ b/components/input/apiExamples/number.html
@@ -1,9 +1,4 @@
-<auro-input required type="number">
-  <slot slot="label">Number of Passengers</slot>
-  <slot slot="helptext">Please enter the number of passengers.</slot>
-</auro-input>
-
-<auro-input bordered required type="number">
+<auro-input type="number" bordered required>
   <slot slot="label">Number of Passengers</slot>
   <slot slot="helptext">Please enter the number of passengers.</slot>
 </auro-input>
