--- a/components/input/apiExamples/placeholder.html
+++ b/components/input/apiExamples/placeholder.html
@@ -1,8 +1,4 @@
-<auro-input required placeholder="John Doe">
-  <span slot="label">Full name</span>
-</auro-input>
-
-<auro-input required bordered placeholder="John Doe">
+<auro-input placeholder="John Doe" bordered required>
   <span slot="label">Full name</span>
   <span slot="helptext">Please enter your full name.</span>
 </auro-input>
