--- a/components/input/apiExamples/yearMonthDay.html
+++ b/components/input/apiExamples/yearMonthDay.html
@@ -1,7 +1,3 @@
-<auro-input type="year-month-day" required>
-  <slot slot="label">Departure date</slot>
-</auro-input>
-
-<auro-input bordered type="year-month-day">
+<auro-input type="year-month-day" bordered>
   <slot slot="label">Arrival date</slot>
 </auro-input>
