feat: counter group added with counter refactor, docs, and validation #91

--- a/components/counter/apiExamples/basic.html
+++ b/components/counter/apiExamples/basic.html
@@ -1,9 +1,8 @@
-<auro-counter>
-  Short label
-</auro-counter>
-<br>
-<hr>
-<br>
-<auro-counter>
-  This is an example of the wrapping behavior for a long label
-</auro-counter>
+<auro-counter-group>
+  <auro-counter>
+    Short label
+  </auro-counter>
+  <auro-counter>
+    This is an example of the wrapping behavior for a long label
+  </auro-counter>
+</auro-counter-group>
