--- a/components/counter/apiExamples/group-max.html
+++ b/components/counter/apiExamples/group-max.html
@@ -1,9 +1,8 @@
-<auro-counter-group>
-  <auro-counter disabled>
+<auro-counter-group max="12" min="0">
+  <auro-counter>
     Short label
   </auro-counter>
-  <auro-counter disabled>
+  <auro-counter>
     This is an example of the wrapping behavior for a long label
-    <span slot="description">with short sub label text</span>
   </auro-counter>
 </auro-counter-group>
