--- a/components/counter/src/styles/color.scss
+++ b/components/counter/src/styles/color.scss
@@ -14,7 +14,7 @@
   color: var(--ds-counter-text-default);
 }
 
-.subLabel {
+.description {
   color: var(--ds-counter-text-secondary);
 }
 
@@ -32,7 +32,7 @@
   }
 
   label,
-  .subLabel,
+  .description,
   &::part(counterControl) {
     color: var(--ds-counter-text-disabled);
   }
