--- a/components/counter/src/styles/style.scss
+++ b/components/counter/src/styles/style.scss
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: var(--ds-size-150);
+  column-gap: var(--ds-size-150, $ds-size-150);
   font-family: var(--ds-font-family-default, $ds-font-family-default);
   font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
 }
@@ -25,21 +25,21 @@
 }
 
 .label {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
+  line-height: var(--ds-size-300, $ds-size-300);
 }
 
 .description {
-  font-size: .75rem;
-  line-height: 1rem;
+  font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
+  line-height: var(--ds-size-200, $ds-size-200);
 }
 
 .quantityWrapper {
-  width: var(--ds-size-400);
+  width: var(--ds-size-400, $ds-size-400);
   height: 34px;
   align-content: center;
   cursor: default;
-  font-size: var(--ds-size-250);
+  font-size: var(--ds-size-250, $ds-size-250);
   text-align: center;
 }
 
