docs: refactor name attribute use in examples #169

--- a/components/checkbox/apiExamples/horizontalLimit.html
+++ b/components/checkbox/apiExamples/horizontalLimit.html
@@ -1,7 +1,7 @@
 <auro-checkbox-group horizontal>
   <span slot="legend">Form label goes here</span>
-  <auro-checkbox value="yes" name="yes" id="checkbox-horizontalLimit1">Yes</auro-checkbox>
-  <auro-checkbox value="no" name="no" id="checkbox-horizontalLimit2">No</auro-checkbox>
-  <auro-checkbox value="maybe" name="maybe" id="checkbox-horizontalLimit3">Maybe</auro-checkbox>
-  <auro-checkbox value="not sure" name="not sure" id="checkbox-horizontalLimit4">Not Sure</auro-checkbox>
+  <auro-checkbox value="yes" name="horizontalLimit" id="checkbox-horizontalLimit1">Yes</auro-checkbox>
+  <auro-checkbox value="no" name="horizontalLimit" id="checkbox-horizontalLimit2">No</auro-checkbox>
+  <auro-checkbox value="maybe" name="horizontalLimit" id="checkbox-horizontalLimit3">Maybe</auro-checkbox>
+  <auro-checkbox value="not sure" name="horizontalLimit" id="checkbox-horizontalLimit4">Not Sure</auro-checkbox>
 </auro-checkbox-group>
