fix: add multiselect attribute to select

--- a/components/select/apiExamples/resetState.html
+++ b/components/select/apiExamples/resetState.html
@@ -1,7 +1,7 @@
 <auro-button id="resetStateBtn">Reset</auro-button>
 <br/><br/>
 
-<auro-select id="resetStateExample" required value="price">
+<auro-select id="resetStateExample" value='["price"]'>
   <label slot="placeholder">Placeholder Text</label>
   <span slot="label">Name</span>
   <auro-menu>
