--- a/components/select/apiExamples/inDialog.html
+++ b/components/select/apiExamples/inDialog.html
@@ -5,7 +5,7 @@
   <auro-dialog id="select-dialog">
     <span slot="header">Select in Dialog</span>
     <div slot="content">
-      <auro-select id="valueExample" value="price">
+      <auro-select id="valueExample" value='["price"]'>
         <span slot="label">Name</span>
         <auro-menu>
           <auro-menuoption id="option-0" value="stops">Stops</auro-menuoption>
