--- a/components/select/apiExamples/value.html
+++ b/components/select/apiExamples/value.html
@@ -1,7 +1,7 @@
 <auro-button id="validValueExampleBtn">Set Value to Valid Option</auro-button>
 <auro-button id="invalidValueExampleBtn">Set Value to Invalid Option</auro-button>
 <br/><br/>
-<auro-select id="valueExample" value="price">
+<auro-select id="valueExample" value='["price"]'>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption id="option-0" value="stops">Stops</auro-menuoption>
