feat: implement a very basic MVP form element
Not feature complete, but ready to start implementing real work.

--- a/components/form/apiExamples/basic.html
+++ b/components/form/apiExamples/basic.html
@@ -1,4 +1,5 @@
-<auro-form>Hello World</auro-form>
-<auro-input>
-    <span slot="label">Hello World</span>
-</auro-input>
+<auro-form>
+  <auro-input>
+      <span slot="label">Hello World</span>
+  </auro-input>
+</auro-form>
