docs: add correct labels to doc examples

--- a/components/datepicker/apiExamples/error.html
+++ b/components/datepicker/apiExamples/error.html
@@ -1,5 +1,6 @@
 <auro-datepicker error="Custom error message" id="errorExample">
-  <span slot="label">Choose a date</span>
+  <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
 
 <auro-button id="undefinedValueExampleBtnAddError">Set Error</auro-button>
