--- a/components/datepicker/apiExamples/helpText.html
+++ b/components/datepicker/apiExamples/helpText.html
@@ -1,4 +1,5 @@
 <auro-datepicker>
-  <span slot="label">Choose a date</span>
+  <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
   <span slot="helpText">Choose a date must be today or earlier.</span>
 </auro-datepicker>
