--- a/components/datepicker/apiExamples/value.html
+++ b/components/datepicker/apiExamples/value.html
@@ -1,3 +1,4 @@
 <auro-datepicker id="valueExample" value="02/02/2022">
-  <span slot="label">Choose a date</span>
+  <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
