--- a/components/datepicker/apiExamples/alertValue.html
+++ b/components/datepicker/apiExamples/alertValue.html
@@ -1,3 +1,4 @@
 <auro-datepicker id="datePickerValueAlert">
   <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
