--- a/components/datepicker/apiExamples/centralDate.html
+++ b/components/datepicker/apiExamples/centralDate.html
@@ -1,3 +1,4 @@
 <auro-datepicker centralDate="06/16/1980">
-  <span slot="label">Choose a date</span>
+  <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
