--- a/components/datepicker/apiExamples/focus.html
+++ b/components/datepicker/apiExamples/focus.html
@@ -1,6 +1,8 @@
+<auro-datepicker id="focusExampleElem" range>
+  <span slot="fromLabel">Departure</span>
+  <span slot="toLabel">Return</span>
+  <span slot="mobileDateLabel">Choose a date</span>
+</auro-datepicker>
+
 <auro-button id="focusExampleBtn">Apply focus to datepicker</auro-button>
 <auro-button id="focusExampleBtnTwo">Apply focus to the second input in datepicker</auro-button>
-<br /><br />
-<auro-datepicker id="focusExampleElem" range>
-  <span slot="label">Choose a date</span>
-</auro-datepicker>
