--- a/components/datepicker/apiExamples/selectedDate.html
+++ b/components/datepicker/apiExamples/selectedDate.html
@@ -1,3 +1,4 @@
 <auro-datepicker selectedDate="06/16/2022">
-  <span slot="label">Choose a date</span>
+  <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
