--- a/components/datepicker/apiExamples/validity.html
+++ b/components/datepicker/apiExamples/validity.html
@@ -1,4 +1,5 @@
 <auro-datepicker required id="validityExample">
   <span slot="fromLabel">Choose a date</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
 <auro-button id="validityExampleBtn">Get validity</auro-button>
