--- a/components/datepicker/apiExamples/valueEnd.html
+++ b/components/datepicker/apiExamples/valueEnd.html
@@ -1,3 +1,5 @@
 <auro-datepicker id="valueEndExample" range valueEnd="03/03/2023">
-  <span slot="label">Choose a date</span>
+  <span slot="fromLabel">Departure</span>
+  <span slot="toLabel">Return</span>
+  <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
