--- a/components/combobox/apiExamples/programmaticValue.html
+++ b/components/combobox/apiExamples/programmaticValue.html
@@ -1,4 +1,4 @@
-<auro-combobox value="Apples">
+<auro-combobox>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
