--- a/components/datepicker/demo/index.html
+++ b/components/datepicker/demo/index.html
@@ -49,7 +49,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-button@latest/dist/auro-button__bundled.js" type="module"></script>
 
     <script type="module" data-demo-script="true">
-      import { initExamples } from "./index.js";
+      import { initExamples } from "./index.min.js";
 
       initExamples();
     </script>
