--- a/components/form/demo/working.html
+++ b/components/form/demo/working.html
@@ -40,6 +40,14 @@
     .datepickerBlock {
       margin-top: 1rem;
     }
+
+    auro-form {
+      display: block;
+      width: 100%;
+      padding: 1rem;
+      border: 1px solid #2a2a2a;
+      border-radius: 1rem;
+    }
   </style>
 
   <h2>auro-form testing</h2>
