feat: counter group dropdown variant #179

--- a/components/counter/src/styles/counter-wrapper-color.scss
+++ b/components/counter/src/styles/counter-wrapper-color.scss
@@ -12,7 +12,7 @@
 
 /* stylelint-disable no-descending-specificity, selector-max-attribute */
 
-.counters {
+:host {
   ::slotted(*:not(:first-child)) {
     border-color: var(--ds-color-border-divider-default, $ds-color-border-divider-default);
   }
