feat: datepicker range support
Form is now aware of datepicker's value and valueEnd keys and will
automatically pick up the `range` attribute.

When no `range` attribute is present, a string value is used. When the
`range` value IS present, an array of strings is used instead.

--- a/components/form/demo/working.html
+++ b/components/form/demo/working.html
@@ -80,6 +80,15 @@
       </auro-datepicker>
     </div>
 
+    <div class="datepickerBlock">
+      <h4>Pick a date range</h4>
+      <auro-datepicker id="date-range" name="dateRange" required range>
+        <span slot="fromLabel">Start</span>
+        <span slot="toLabel">End</span>
+        <span slot="mobileDateLabel">Choose a range</span>
+      </auro-datepicker>
+    </div>
+
     <div class="submitBlock">
       <auro-button type="reset">Reset</auro-button>
       <auro-button type="submit">Submit</auro-button>
