--- a/components/form/demo/hotel-form.html
+++ b/components/form/demo/hotel-form.html
@@ -30,66 +30,104 @@
 <body class="auro-markdown">
 <main>
   <style>
-
     #borealis-hotel-booking-form {
-      display: inline-flex;
-      flex-direction: column;
+      box-sizing: border-box;
+      display: inline-block;
       background-color: var(--ds-color-background-primary-200-default, #F7F7F7);
       padding: var(--ds-grid-gutter-lg, 1.5rem);
       width: 454px;
     }
 
-    .borealis-hotel-booking-form-row:not(:last-child) {
-      margin-bottom: var(--ds-size-200, 1rem);
+    #borealis-hotel-booking-form-container {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      box-sizing: border-box;
+      gap: var(--ds-size-200, 1rem);
     }
+
+    #borealis-hotel-booking-form[narrow] {
+      width: 290px;
+    }
+
+    #borealis-hotel-booking-form[wide] {
+      width: 100%;
+    }
+
+    #borealis-hotel-booking-form[wide] #borealis-hotel-booking-form-container {
+      display: flex;
+      flex-direction: row;
+      align-items: start;
+    }
+
+    #borealis-hotel-booking-form[wide] .borealis-hotel-booking-form-item {
+      width: 30%;
+    }
+
+
+    #borealis-hotel-booking-form[wide] auro-button {
+      margin-top: var(--ds-size-75, 0.375rem);
+    }
+
+    auro-button {
+      float: right;
+    }
+
   </style>
 
   <h2>Hotel Booking Form Testing</h2>
+  <auro-select id="mode-selector">
+    <auro-menu>
+      <auro-menuoption value="default">Default</auro-menuoption>
+      <auro-menuoption value="narrow">Narrow</auro-menuoption>
+      <auro-menuoption value="wide">Wide</auro-menuoption>
+    </auro-menu>
+  </auro-select>
   <auro-form id="borealis-hotel-booking-form">
-    <div class="borealis-hotel-booking-form-row">
-      <auro-combobox id="dynamicMenuExample" name="cityAirport" noFilter required>
-        <span slot="label">City, airport, or landmark</span>
-        <!--
-          The auro-combobox element requires an empty auro-menu element
-          due to the requirements of auro-dropdown and auro-input
-        -->
-        <auro-menu id="initMenu"></auro-menu>
-      </auro-combobox>
-    </div>
+    <div id="borealis-hotel-booking-form-container">
+      <div class="borealis-hotel-booking-form-item">
+        <auro-combobox id="dynamicMenuExample" name="cityAirport" noFilter required>
+          <span slot="label">City, airport, or landmark</span>
+          <!--
+            The auro-combobox element requires an empty auro-menu element
+            due to the requirements of auro-dropdown and auro-input
+          -->
+          <auro-menu id="initMenu"></auro-menu>
+        </auro-combobox>
+      </div>
 
-    <div class="borealis-hotel-booking-form-row">
-      <auro-datepicker name="dateRange" range required>
-        <span slot="fromLabel">Check in</span>
-        <span slot="toLabel">Check out</span>
-        <span slot="mobileDateLabel">Roundtrip</span>
-      </auro-datepicker>
-    </div>
+      <div class="borealis-hotel-booking-form-item">
+        <auro-datepicker name="dateRange" range required>
+          <span slot="fromLabel">Check in</span>
+          <span slot="toLabel">Check out</span>
+          <span slot="mobileDateLabel">Roundtrip</span>
+        </auro-datepicker>
+      </div>
 
-    <div class="borealis-hotel-booking-form-row">
-      <auro-counter-group isDropdown required>
-        <div slot="placeholder">Rooms, Guests</div>
-        <auro-counter min="1">
-          Rooms
-          <span slot="description">
-            Total rooms
-          </span>
-        </auro-counter>
-        <auro-counter min="1">
-          Adults Per Room
-          <span slot="description">
-            Ages 18 and older
-          </span>
-        </auro-counter>
-        <auro-counter>
-          Children Per Room
-          <span slot="description">
-            Ages 0-17
-          </span>
-        </auro-counter>
-      </auro-counter-group>
-    </div>
+      <div class="borealis-hotel-booking-form-item">
+        <auro-counter-group isDropdown required>
+          <div slot="placeholder">Rooms, Guests</div>
+          <auro-counter min="1">
+            Rooms
+            <span slot="description">
+              Total rooms
+            </span>
+          </auro-counter>
+          <auro-counter min="1">
+            Adults Per Room
+            <span slot="description">
+              Ages 18 and older
+            </span>
+          </auro-counter>
+          <auro-counter>
+            Children Per Room
+            <span slot="description">
+              Ages 0-17
+            </span>
+          </auro-counter>
+        </auro-counter-group>
+      </div>
 
-    <div class="borealis-hotel-booking-form-row">
       <auro-button type="submit" fluid>
         Search hotels
       </auro-button>
@@ -119,11 +157,32 @@
     console.log(event)
 
     console.log(event.target.value)
-  })
+  });
+
+  const selector = document.querySelector('#mode-selector');
+  selector.value = ['default'];
+  selector.addEventListener("auroSelect-valueSet", (event) => {
+    switch(event.target.value[0]) {
+      case 'narrow':
+        form.setAttribute('narrow', '');
+        form.removeAttribute('wide');
+        break;
+      case 'wide':
+        form.setAttribute('wide', '');
+        form.removeAttribute('narrow');
+        break;
+      case 'default':
+      default:
+        form.removeAttribute('narrow');
+        form.removeAttribute('wide');
+        break;
+    }
+    console.log(event.target.value);
+  });
+  
 </script>
 
 <!-- If additional elements are needed for the demo, add them here. -->
-<script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
 </body>
 </html>
