--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -70,7 +70,8 @@ auro-menuoption {
 }
 
 .selectElement-helpText {
-  margin: var(--ds-size-50, $ds-size-50) 0;
+  margin-top: var(--ds-size-50, $ds-size-50);
+  margin-bottom: 0;
   font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
   line-height: 1rem;
 }
