refactor: update semantic tag on helptext, `package.json`

--- a/components/helptext/src/styles/style.scss
+++ b/components/helptext/src/styles/style.scss
@@ -16,6 +16,10 @@
   line-height: var(--ds-size-200, $ds-size-200);
 }
 
-.helptext-wrapper[visible='true'] {
+.helptext-wrapper[visible] {
   display: block;
+}
+
+::slotted(p) {
+  margin-block: 0;
 }
