feat: enhance dropdown rendering with value, label, and help text slots #250

--- a/components/counter/apiExamples/dropdown-help-text.html
+++ b/components/counter/apiExamples/dropdown-help-text.html
@@ -1,6 +1,6 @@
 <div style="max-width: 350px;">
   <auro-counter-group isDropdown>
-    <div slot="label">Passengers</div>
+    <div slot="helpText">This is help text</div>
     <auro-counter>
       Adults
       <span slot="description">18 years or older</span>
