--- a/components/counter/apiExamples/dropdown-value-text.html
+++ b/components/counter/apiExamples/dropdown-value-text.html
@@ -1,6 +1,7 @@
 <div style="max-width: 350px;">
   <auro-counter-group isDropdown>
-    <div slot="label">Passengers</div>
+    <div slot="valueText">Custom value text</div>
+    <div slot="label"></div>
     <auro-counter>
       Adults
       <span slot="description">18 years or older</span>
