--- a/components/helptext/src/styles/style.scss
+++ b/components/helptext/src/styles/style.scss
@@ -16,9 +16,14 @@
   display: none;
   margin-top: var(--ds-size-50, $ds-size-50);
   margin-bottom: 0;
-  color: var(--ds-auro-helptext-color);
   font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
   line-height: var(--ds-size-200, $ds-size-200);
+}
+
+:host([large]) {
+  .helptext-wrapper {
+    font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
+  }
 }
 
 .helptext-wrapper[visible] {
