--- a/components/dropdown/src/styles/color.scss
+++ b/components/dropdown/src/styles/color.scss
@@ -15,16 +15,18 @@
   border-color: var(--ds-auro-dropdown-trigger-border-color);
   background-color: var(--ds-auro-dropdown-trigger-container-color);
   color: var(--ds-auro-dropdown-trigger-text-color);
+  outline-color: var(--ds-auro-dropdown-trigger-outline-color);
 
   &:focus-within,
   &:active {
     --ds-auro-dropdown-trigger-border-color: var(--ds-color-border-active-default, #{$ds-color-border-active-default});
+    --ds-auro-dropdown-trigger-outline-color: var(--ds-color-border-active-default, #{$ds-color-border-active-default});
   }
 
   &:focus-within {
     &:not(:active) {
       --ds-auro-dropdown-trigger-border-color: var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
-      outline: 1px solid var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
+      --ds-auro-dropdown-trigger-outline-color: var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
     }
   }
 
