feat: move combobox's input to bib in fullscreen mode #322

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -25,6 +25,10 @@
 
 #subheader {
   width: 100%;
+
+  ::slotted([auro-input]) {
+    padding: 0 var(--ds-size-200, $ds-size-200);
+  }
 }
 
 #closeButton{
