--- a/components/combobox/apiExamples/airports.html
+++ b/components/combobox/apiExamples/airports.html
@@ -1,4 +1,5 @@
 <auro-combobox>
+  <span slot="bib.header">Airports</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="fca" id="airport-fca" suggest="fca montana kalispell">glacier park international</auro-menuoption>
