--- a/components/combobox/apiExamples/resetState.html
+++ b/components/combobox/apiExamples/resetState.html
@@ -2,6 +2,7 @@
 <br /><br />
 
 <auro-combobox id="resetStateExample" required>
+  <span slot="bib.header">bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
