--- a/components/combobox/apiExamples/typeCreditCard.html
+++ b/components/combobox/apiExamples/typeCreditCard.html
@@ -1,4 +1,5 @@
 <auro-combobox type="credit-card" triggerIcon>
+  <span slot="bib.header">Credit Card</span>
   <span slot="label">Credit Card Number</span>
   <auro-menu>
     <auro-menuoption value="4500000000000000" id="option-cc-0">
