--- a/components/combobox/apiExamples/typeMonthDayYear.html
+++ b/components/combobox/apiExamples/typeMonthDayYear.html
@@ -1,4 +1,5 @@
 <auro-combobox type="month-day-year" triggerIcon>
+  <span slot="bib.header">Date Combobox Header</span>
   <span slot="label">Date</span>
   <auro-menu>
     <auro-menuoption value="01/02/2020" id="option-date-0">
