--- a/components/combobox/apiExamples/focus.html
+++ b/components/combobox/apiExamples/focus.html
@@ -1,6 +1,7 @@
 <auro-button id="focusExampleBtn">Apply focus to combobox</auro-button>
 <br /><br />
 <auro-combobox id="focusExample">
+  <span slot="bib.header">bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
