--- a/components/combobox/apiExamples/loading.html
+++ b/components/combobox/apiExamples/loading.html
@@ -1,4 +1,5 @@
 <auro-combobox id="loadingExample">
+  <span slot="bib.header">Loading Combobox Header</span>
   <span slot="label">Please select a preference</span>
   <auro-menu id="loadingExampleComboboxMenu">
     <auro-loader slot="loadingIcon" orbit xs></auro-loader><span slot="loadingText">Loading...</span>
