--- a/components/combobox/apiExamples/value.html
+++ b/components/combobox/apiExamples/value.html
@@ -3,6 +3,7 @@
 <auro-button id="valueUndefinedExampleBtn">Reset</auro-button>
 <br/><br/>
 <auro-combobox id="valueExample">
+  <span slot="bib.header">bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
