--- a/components/combobox/apiExamples/withCheckmark.html
+++ b/components/combobox/apiExamples/withCheckmark.html
@@ -1,4 +1,5 @@
 <auro-combobox checkmark>
+    <span slot="bib.header">bib Header</span>
     <span slot="label">Name</span>
     <auro-menu>
         <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
