perf: implement type date with format attribute #329
BREAKING CHANGE: old date types are deprecated

--- a/components/combobox/apiExamples/typeMonthDayYear.html
+++ b/components/combobox/apiExamples/typeMonthDayYear.html
@@ -1,4 +1,4 @@
-<auro-combobox type="month-day-year" triggerIcon>
+<auro-combobox type="date" triggerIcon>
   <span slot="bib.fullscreen.headline">Date Combobox Header</span>
   <span slot="label">Date</span>
   <auro-menu>
