--- a/components/input/apiExamples/monthDayYear.html
+++ b/components/input/apiExamples/monthDayYear.html
@@ -1,3 +1,3 @@
-<auro-input type="month-day-year" bordered>
+<auro-input type="date" bordered>
   <slot slot="label">Arrival date</slot>
 </auro-input>
