--- a/components/input/apiExamples/yearMonth.html
+++ b/components/input/apiExamples/yearMonth.html
@@ -1,3 +1,3 @@
-<auro-input type="date" format="mm/yy" bordered>
+<auro-input type="date" format="yy/mm" bordered>
   <slot slot="label">Expiration date</slot>
 </auro-input>
