--- a/components/input/apiExamples/disabled.html
+++ b/components/input/apiExamples/disabled.html
@@ -1,3 +1,3 @@
-<auro-input disabled bordered type="month-day-year">
+<auro-input disabled bordered type="date">
   <slot slot="label">Arrival date</slot>
 </auro-input>
