--- a/components/input/apiExamples/fullYear.html
+++ b/components/input/apiExamples/fullYear.html
@@ -1,3 +1,3 @@
-<auro-input type="fullYear" bordered>
+<auro-input type="date" format="yyyy" bordered>
   <slot slot="label">Full Year</slot>
 </auro-input>
