--- a/components/input/apiExamples/monthFullYear.html
+++ b/components/input/apiExamples/monthFullYear.html
@@ -1,3 +1,3 @@
-<auro-input type="month-fullYear" bordered>
-  <slot slot="label">Arrival date</slot>
+<auro-input type="date" format="mm/yyyy" bordered>
+  <slot slot="label">Expiration date</slot>
 </auro-input>
