--- a/components/input/apiExamples/yearMonthDay.html
+++ b/components/input/apiExamples/yearMonthDay.html
@@ -1,3 +1,3 @@
-<auro-input type="year-month-day" bordered>
+<auro-input type="date" format="yyyy/mm/dd" bordered>
   <slot slot="label">Arrival date</slot>
 </auro-input>
