feat: make counter-group dropdown fullscreen on mobile screen

--- a/components/counter/apiExamples/dropdown-help-text.html
+++ b/components/counter/apiExamples/dropdown-help-text.html
@@ -1,5 +1,6 @@
 <div style="max-width: 350px;">
   <auro-counter-group isDropdown>
+    <span slot="bib.mobile.headline">Counter Bib Header</span>
     <div slot="helpText">This is help text</div>
     <auro-counter>
       Adults
